--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 alembic==1.15.2
 annotated-types==0.7.0
+attrs==25.3.0
 banal==1.0.6
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
 contourpy==1.3.2
 cycler==0.12.1
-dataset==1.6.2
+datasets==3.6.0
+dill==0.3.8
 docker-pycreds==0.4.0
 filelock==3.18.0
 fonttools==4.58.0
-fsspec==2025.5.0
+frozenlist==1.6.0
+fsspec==2025.3.0
 gitdb==4.0.12
 GitPython==3.1.44
 greenlet==3.2.2
+huggingface-hub==0.31.4
 idna==3.10
 Jinja2==3.1.6
 kiwisolver==1.4.8
@@ -21,21 +28,27 @@ Mako==1.3.10
 MarkupSafe==3.0.2
 matplotlib==3.10.3
 mpmath==1.3.0
+multidict==6.4.4
+multiprocess==0.70.16
 networkx==3.4.2
 numpy==1.26.4
 packaging==25.0
 pandas==2.2.3
 pillow==11.2.1
 platformdirs==4.3.8
+propcache==0.3.1
 protobuf==6.31.0
 psutil==7.0.0
+pyarrow==20.0.0
 pydantic==2.11.4
 pydantic_core==2.33.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
+safetensors==0.5.3
 seaborn==0.13.2
 sentry-sdk==2.29.1
 setproctitle==1.3.6
@@ -43,10 +56,15 @@ six==1.17.0
 smmap==5.0.2
 SQLAlchemy==1.4.54
 sympy==1.14.0
+tokenizers==0.21.1
 torch==2.2.2
 torchvision==0.17.2
+tqdm==4.67.1
+transformers==4.52.1
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 wandb==0.19.11
+xxhash==3.5.0
+yarl==1.20.0
