--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ venv/
 
 # miscellanous files
 organiser.py
+
+__pycache__
+model_checkpoints/
+training_plots/
+transformer_main.log
+wandb_cleanup.py
