--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ docker-pycreds==0.4.0
 filelock==3.18.0
 fonttools==4.58.0
 frozenlist==1.6.0
-fsspec==2024.2.0 # REVISED: Changed from 2025.3.0 to be compatible with datasets==2.18.0
+fsspec==2024.2.0
 gitdb==4.0.12
 GitPython==3.1.44
 greenlet==3.2.2
@@ -37,7 +37,7 @@ pandas==2.2.3
 pillow==11.2.1
 platformdirs==4.3.8
 propcache==0.3.1
-protobuf==6.31.0
+protobuf==4.25.3 # REVISED: Changed from 6.31.0 to be compatible with wandb==0.16.6
 psutil==7.0.0
 pyarrow==20.0.0
 pydantic==2.11.4
