--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ charset-normalizer==3.4.2
 click==8.2.1
 contourpy==1.3.2
 cycler==0.12.1
-datasets==3.6.0
+datasets==2.18.0  # REVISED: Compatible with older transformers/torch
 dill==0.3.8
 docker-pycreds==0.4.0
 filelock==3.18.0
@@ -56,15 +56,16 @@ six==1.17.0
 smmap==5.0.2
 SQLAlchemy==1.4.54
 sympy==1.14.0
-tokenizers==0.21.1
-torch==2.2.2
+tokenizers==0.15.2 # REVISED: Compatible with transformers 4.39.3
+torch==2.2.2      # KEPT: This is the target PyTorch version
 torchvision==0.17.2
 tqdm==4.67.1
-transformers==4.52.1
+transformers==4.39.3 # REVISED: Known stable version compatible with torch 2.2.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
-wandb==0.19.11
+wandb==0.16.6    # REVISED: Compatible with older transformers
 xxhash==3.5.0
 yarl==1.20.0
+accelerate==0.27.2 # ADDED: Explicitly pin accelerate for compatibility
