--- a/requirements.txt
+++ b/requirements.txt
@@ -10,13 +10,13 @@ charset-normalizer==3.4.2
 click==8.2.1
 contourpy==1.3.2
 cycler==0.12.1
-datasets==2.18.0  # REVISED: Compatible with older transformers/torch
+datasets==2.18.0
 dill==0.3.8
 docker-pycreds==0.4.0
 filelock==3.18.0
 fonttools==4.58.0
 frozenlist==1.6.0
-fsspec==2025.3.0
+fsspec==2024.2.0 # REVISED: Changed from 2025.3.0 to be compatible with datasets==2.18.0
 gitdb==4.0.12
 GitPython==3.1.44
 greenlet==3.2.2
@@ -56,16 +56,16 @@ six==1.17.0
 smmap==5.0.2
 SQLAlchemy==1.4.54
 sympy==1.14.0
-tokenizers==0.15.2 # REVISED: Compatible with transformers 4.39.3
-torch==2.2.2      # KEPT: This is the target PyTorch version
+tokenizers==0.15.2
+torch==2.2.2
 torchvision==0.17.2
 tqdm==4.67.1
-transformers==4.39.3 # REVISED: Known stable version compatible with torch 2.2.2
+transformers==4.39.3
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
-wandb==0.16.6    # REVISED: Compatible with older transformers
+wandb==0.16.6
 xxhash==3.5.0
 yarl==1.20.0
-accelerate==0.27.2 # ADDED: Explicitly pin accelerate for compatibility
+accelerate==0.27.2
