--- a/requirements.txt
+++ b/requirements.txt
@@ -11,14 +11,14 @@ charset-normalizer==3.4.2
 click==8.2.1
 contourpy==1.3.2
 cycler==0.12.1
-datasets==2.16.1
-dill==0.3.7
+datasets==2.16.1              # Compatible with dill<0.3.8, pyarrow<15, fsspec<=2023.10.0
+dill==0.3.7                   # Compatible with datasets==2.16.1 and multiprocess==0.70.14
 docker-pycreds==0.4.0
 filelock==3.18.0
 flake8==7.2.0
 fonttools==4.58.0
 frozenlist==1.6.0
-fsspec==2023.10.0
+fsspec==2023.10.0             # Compatible with datasets==2.16.1
 gitdb==4.0.12
 GitPython==3.1.44
 greenlet==3.2.2
@@ -32,20 +32,20 @@ matplotlib==3.10.3
 mccabe==0.7.0
 mpmath==1.3.0
 multidict==6.4.4
-multiprocess==0.70.14
+multiprocess==0.70.14         # Works with dill==0.3.7
 mypy==1.15.0
 mypy_extensions==1.1.0
 networkx==3.4.2
 numpy==1.26.4
-packaging==24.0
+packaging==24.0               # Compatible with LangChain and most modern tools
 pandas==2.2.2
 pathspec==0.12.1
 pillow==11.2.1
 platformdirs==4.3.8
 propcache==0.3.1
-protobuf==5.29.1
+protobuf==5.29.1              # Required by TensorFlow, grpcio-status, Google APIs
 psutil==7.0.0
-pyarrow==14.0.2
+pyarrow==14.0.2               # Required by cudf / legacy packages, compatible with datasets==2.16.1
 pycodestyle==2.13.0
 pydantic==2.11.4
 pydantic_core==2.33.2
@@ -62,10 +62,10 @@ sentry-sdk==2.29.1
 setproctitle==1.3.6
 six==1.17.0
 smmap==5.0.2
-SQLAlchemy==2.0.30
-sympy==1.14.0
+SQLAlchemy==2.0.30            # Needed for ipython-sql, compatible with Alembic
+sympy==1.13.1                 # Required by torch==2.6.0
 tokenizers==0.21.1
-torch==2.6.0
+torch==2.6.0                  # Latest Torch, compatible with torchvision and sympy==1.13.1
 torchvision==0.17.2
 tqdm==4.67.1
 transformers==4.52.1
