--- a/config.yml
+++ b/config.yml
@@ -17,24 +17,24 @@ TOKENIZER_NAME: "gpt2"
 # --- Data Loading Configuration ---
 # Set the maximum number of characters to use for training
 # This limits the dataset size for faster iteration, especially for tuning.
-RAW_TEXT_LIMIT: 3000000 # 3 Million characters
+RAW_TEXT_LIMIT: 50000000 # 50 Million characters
 
 RUN_MODE: "single" # single or grid
 
 # --- TRAINING HYPERPARAMETERS FOR SINGLE RUN TRAINING---
 BATCH_SIZE: 16
 CONTEXT_WINDOW: 124
-CHANNEL_DIM: 512
-NUM_HEADS: 16
-NUM_LAYERS: 12
-LEARNING_RATE: 5e-4
+CHANNEL_DIM: 384 # 512
+NUM_HEADS: 12 # 16
+NUM_LAYERS: 8 # 12
+LEARNING_RATE: 3e-4 # 5e-4
 TRAINING_STEPS: 20000
 
 MIN_DELTA: 0.001 # we should not make this value too small because we want to have meaningful improvement in our validation loss
 EVAL_ITERS_VAL: 20 # for calculating evaluation loss, we randomly take EVAL_ITERS_VAL batches of validation set, and take their average loss.
 EVAL_ITERS_TEST: 50
 VALIDATION_CHECK_EVERY: 100
-EARLY_STOPPING_PATIENCE: 20
+EARLY_STOPPING_PATIENCE: 25 # 20
 
 # --- TRAINING HYPERPARAMETERS GRID SEARCH FOR HYPERPARAMETER SEARCH ---
 HP_SEARCH_LRS: [1e-3, 5e-4, 1e-4]
