feat: Implement robust training lifecycle and artifact cleanup - Created a new directory structure - Add a completed flag to checkpoints to prevent restarting finished or early-stopped runs. - TrainingManager now checks this flag and skips training if a run is already complete, which is crucial for hyperparameter searches. - Automatically delete local _latest.pt and _best.pt checkpoints after the model artifact is successfully logged to Weights & Biases. - Ensure post-training evaluation runs correctly even if a completed run is resumed.

--- a/transformer_e2e/configs/config.yml
+++ b/transformer_e2e/configs/config.yml
@@ -64,3 +64,6 @@ LOSS_PLOT_DIRECTORY: "train_eval_plots/" # directory for loss plots
 MAX_TOKENS_AHEAD: 100
 TEMPERATURE: 0.7
 TOP_K: 40
+
+# --- TRAINING MANAGEMENT ---
+DELETE_LATEST_CHECKPOINT_ON_COMPLETION: True # Set to True to enable deletion, False to keep
