feat: Enhance training robustness, validation, resource management, and code quality Improved validation loss calculation logic: Now computes average loss over multiple batches with a configurable minimum success ratio. Raises a custom ValidationLossComputationError if too many batches fail, and logs warnings if only a subset of batches succeed. Added explicit resource and model cleanup: Introduced cleanup() methods to model classes (e.g., TransformerModel, MultiHeadAttention) to free GPU memory and buffers, delete parameters and buffers, and call torch.cuda.empty_cache() for better memory management. Implemented W&B artifact upload timeout: Added wait_for_artifact_upload function using threading to enforce a timeout on W&B artifact uploads, preventing indefinite hangs and ensuring local checkpoints are only deleted if upload succeeds within the timeout. Enhanced training lifecycle and checkpoint management: Added a completed flag to checkpoints to prevent restarting finished or early-stopped runs. TrainingManager now checks this flag and skips training if a run is already complete, ensuring correct behavior for hyperparameter searches and resuming runs. Post-training evaluation and artifact logging still occur for completed runs. Local latest.pt and _best.pt checkpoints are automatically deleted after successful artifact logging (configurable via DELETE_LATEST_CHECKPOINT_ON_COMPLETION). Improved exception handling and logging: Enhanced error handling and logging throughout training and generation scripts, ensuring W&B runs are always properly finished and critical errors are reported. Removed redundant and orphan code: Cleaned up unused imports (e.g., yaml), ensured idempotent monkey-patching of the generate method, and removed unnecessary print statements from model initialization. Refactored directory structure and imports: Migrated to a modular src/ and tests/ structure, updated all imports, and improved script entry points to use the new structure. Updated conf

--- a/transformer_e2e/configs/config.yml
+++ b/transformer_e2e/configs/config.yml
@@ -38,6 +38,7 @@ DROPOUT_RATE: 0.1
 FINAL_DROPOUT_MULTIPLIER: 4
 MAX_DROPOUT_VAL: 0.5
 EARLY_STOPPING_PATIENCE: 25 # 20
+MIN_SUCCESSFUL_VAL_BATCH_RATIO: 0.5 # 0.5 means that we need at least 50% of the validation batches to be successful to continue training
 
 # --- TRAINING HYPERPARAMETERS GRID SEARCH FOR HYPERPARAMETER SEARCH ---
 HP_SEARCH_LRS: [1e-3, 5e-4, 1e-4]
@@ -60,10 +61,6 @@ MODEL_CHECKPOINTS_DIR: "model_checkpoints/" # Path for saving model checkpoints
 LOG_FILE: "transformer_epic_model.log" # file to log runs on the codebase
 LOSS_PLOT_DIRECTORY: "train_eval_plots/" # directory for loss plots
 
-# --- TEXT GENERATION PARAMETERS ---
-MAX_TOKENS_AHEAD: 100
-TEMPERATURE: 0.7
-TOP_K: 40
-
 # --- TRAINING MANAGEMENT ---
 DELETE_LATEST_CHECKPOINT_ON_COMPLETION: True # Set to True to enable deletion, False to keep
+
