--- a/.github/workflows/ci-model.yml
+++ b/.github/workflows/ci-model.yml
@@ -14,7 +14,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./transformer_e2e
+        working-directory: .
 
     steps:
       - name: Checkout repository
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ../requirements.txt
+          pip install -r requirements.txt
           pip install black flake8
 
       - name: Check code formatting with black
