--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,29 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiosignal==1.3.2
-alembic==1.15.2
-annotated-types==0.7.0
-attrs==25.3.0
-banal==1.0.6
-black==25.1.0
-certifi==2025.4.26
-charset-normalizer==3.4.2
-click==8.2.1
-contourpy==1.3.2
-cycler==0.12.1
-datasets==3.6.0
-dill==0.3.8
-docker-pycreds==0.4.0
-filelock==3.18.0
-flake8==7.2.0
-fonttools==4.58.0
-frozenlist==1.6.0
-fsspec==2025.3.0
-gitdb==4.0.12
-GitPython==3.1.44
-greenlet==3.2.2
-huggingface-hub==0.31.4
-idna==3.10
-iniconfig==2.1.0
-Jinja2==3.1.6
-kiwisolver==1.4.8
-Mako==1.3.10
-MarkupSafe==3.0.2
-matplotlib==3.10.3
-mccabe==0.7.0
-mpmath==1.3.0
-multidict==6.4.4
-multiprocess==0.70.16
-mypy==1.15.0
-mypy_extensions==1.1.0
-networkx==3.4.2
-numpy==1.26.4
-packaging==25.0
-pandas==2.2.3
-pathspec==0.12.1
-pillow==11.2.1
-platformdirs==4.3.8
-pluggy==1.6.0
-propcache==0.3.1
-protobuf==6.31.0
-psutil==7.0.0
-pyarrow==20.0.0
-pycodestyle==2.13.0
-pydantic==2.11.4
-pydantic_core==2.33.2
-pyflakes==3.3.2
-Pygments==2.19.1
-pyparsing==3.2.3
-pytest==8.4.0
-python-dateutil==2.9.0.post0
-pytz==2025.2
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
-safetensors==0.5.3
-seaborn==0.13.2
-sentry-sdk==2.29.1
-setproctitle==1.3.6
-six==1.17.0
-smmap==5.0.2
-SQLAlchemy==1.4.54
-sympy==1.14.0
-tokenizers==0.21.1
+# Core ML and Deep Learning
 torch==2.2.2
 torchvision==0.17.2
-tqdm==4.67.1
 transformers==4.52.1
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-tzdata==2025.2
-urllib3==2.4.0
+datasets==3.6.0
+tokenizers==0.21.1
+
+# Scientific Computing and Data
+numpy==1.26.4
+pandas==2.2.3
+matplotlib==3.10.3
+
+# Configuration and Utilities
+PyYAML==6.0.2
+python-dotenv==1.0.1
+
+# Experiment Tracking
 wandb==0.19.11
-xxhash==3.5.0
-yarl==1.20.0
-python-dotenv
-flake8-bugbear
+
+# Development and Testing
+pytest==8.4.0
+black==25.1.0
+flake8==7.2.0
+flake8-bugbear==24.12.12
+
+# Core Python packages (typically included but ensuring compatibility)
+requests==2.32.3
+tqdm==4.67.1
+packaging==24.2
