Refactor: Robust Smart Resumption, Checkpoint Naming, W&B Integration, and Test/Doc Overhaul
### Major Features & Improvements

- **Smart Resumption Logic Overhaul**
  - Now checks for both persistent completion status and actual checkpoint file existence before resuming or starting new runs.
  - Handles cases where checkpoints have been deleted after completion, ensuring no accidental overwrites or false resumptions.
  - Suffix-based run ID logic is robust, with fallback to timestamp if too many runs exist.
  - Removed all redundant/in-memory flags (e.g., ), making the JSON completion file the single source of truth.

- **Centralized & Consistent Checkpoint Naming**
  - Introduced a single utility function () for generating checkpoint filenames.
  - All modules (training manager, smart resumption, training loop) now use this function, ensuring DRY and consistent naming.
  - Improved learning rate formatting in checkpoint and artifact names for clarity and reproducibility.

- **W&B Integration Improvements**
  - Added timestamp to W&B run metadata and artifact details for better traceability.
  - Fixed W&B resume logic: now uses  and unique run IDs, preventing run ID conflicts and ensuring correct resumption.
  - Removed all uses of  for intermediate checkpoints, relying solely on artifact logging for model versioning.
  - Enhanced artifact metadata with run parameters and creation timestamps.

- **Hyperparameter Search Fixes**
  - Fixed learning rate formatting in hyperparameter search runs for consistent artifact and checkpoint naming.

### Testing & Code Quality

- **Test Suite Overhaul**
  - Consolidated and refactored training lifecycle integration tests for clarity and coverage.
  - Removed redundant/backup test files and merged overlapping test logic.
  - Updated tests to match new resumption and completion logic, including edge cases for checkpoint deletion and run ID suffixing.
  - Improved test structure to mirror the source code layout for easier maintena

--- a/configs/config.yml
+++ b/configs/config.yml
@@ -3,7 +3,7 @@
 # --- CONTROL FLAGS ---
 
 SHOULD_TRAIN_SINGLE_RUN: True # Set to true to run the single run (where we have 1 set of hyperparameters)
-SHOULD_HYPERPARAMETER_SEARCH: False # Set to true for hyperparameter searching
+SHOULD_HYPERPARAMETER_SEARCH: True # Set to true for hyperparameter searching
 ALWAYS_LOG_ARTIFACTS: True # Flag for if we want to save our model as wandb artefact
 
 # --- Environment ---
@@ -19,16 +19,16 @@ TOKENIZER_NAME: "gpt2"
 # This limits the dataset size for faster iteration, especially for tuning.
 RAW_TEXT_LIMIT: 10000000 # 10 Million characters
 
-RUN_MODE: "single" # single or grid
+RUN_MODE: "grid" # single or grid
 
 # --- TRAINING HYPERPARAMETERS FOR SINGLE RUN TRAINING---
-BATCH_SIZE: 32
-CONTEXT_WINDOW: 256
-CHANNEL_DIM: 512
-NUM_HEADS: 8
-NUM_LAYERS: 8
+BATCH_SIZE: 12 #32
+CONTEXT_WINDOW: 16 #256
+CHANNEL_DIM: 128 #512
+NUM_HEADS: 4 #8
+NUM_LAYERS: 3 #8
 LEARNING_RATE: 3e-4
-TRAINING_STEPS: 30000
+TRAINING_STEPS: 1000 #30000
 
 MIN_DELTA: 0.001 # we should not make this value too small because we want to have meaningful improvement in our validation loss
 EVAL_ITERS_VAL: 10 # for calculating evaluation loss, we randomly take EVAL_ITERS_VAL batches of validation set, and take their average loss.
