Refactored Training Loop for Consistency and Memory Efficiency This commit refactors the training loop to align with the successful base model training approach, while retaining critical memory optimizations.
Key changes include:

Removed Gradient Accumulation: We're no longer using micro-batches or gradient accumulation. The training now processes one batch at a time, mirroring the base training.
Restored Batch Size: All batch sizes are reverted to 32, matching the base model's successful configuration.
Simplified Training Process: The training loop now directly handles single batches: getting a batch, forward passes for teacher (with CPU offloading) and student, distillation loss computation, backward pass, and optimizer step, followed by tensor cleanup.
Retained Memory Optimizations: Crucial memory management techniques are still in place, including CPU offloading of teacher predictions, chunked loss computation, aggressive memory cleanup, and GPU cache clearing.
Fixed Validation: The validation function has been updated for proper memory cleanup after each batch.

--- a/configs/packaging_config.yml
+++ b/configs/packaging_config.yml
@@ -83,7 +83,7 @@ optimization:
   distillation:
     # Training parameters for normal distillation
     learning_rate: 0.0001
-    batch_size: 8 # Reduced for memory efficiency on T4 GPU
+    batch_size: 32
     num_epochs: 10
     patience: 3 # Early stopping patience
 
@@ -132,7 +132,7 @@ optimization:
     # QAD requires different parameters than normal distillation
     # Lower learning rate due to quantization noise
     learning_rate: 0.00005 # Half of normal distillation
-    batch_size: 8 # Reduced for memory efficiency on T4 GPU
+    batch_size: 32
     num_epochs: 15 # More epochs for QAD convergence
     patience: 5 # More patience for QAD
 
@@ -186,7 +186,7 @@ optimization:
     # Note: When doing combined distillation + quantization, QAT happens during
     # the distillation training using the same epochs and learning rate as distillation
     qat:
-      batch_size: 8 # Reduced for memory efficiency on T4 GPU
+      batch_size: 32
 
     # Dynamic quantization settings (optional)
     dynamic:
