--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,11 @@ flake8-bugbear==24.12.12
 requests==2.32.3
 tqdm==4.67.1
 packaging==24.2
+
+# Model Optimization and Evaluation
+nltk==3.9.1
+sacrebleu==2.4.3
+psutil==6.1.0
+memory-profiler==0.61.0
+
+nltk==3.9.1
